--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Capture</title>
+    <title>Debug</title>
   </head>
   <body>
     <script src="./renderer.js"></script>
